--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <body>
       <div id="app">
          <h1>{{message}}</h1>
+         <img :src="imgSrc" alt="" />
       </div>
       <script src="js/main.js"></script>
    </body>
