--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <div id="app">
          <h1>{{message}}</h1>
          <img :src="imgSrc" alt="" />
+         <hr />
+         <ul class="members"></ul>
       </div>
       <script src="js/main.js"></script>
    </body>
